index.html code change

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			    <span class="hamburger-inner"></span>
 			  </span>
 			</button>
-			<a href="#" class="logo">H5ML STARTER</a>
+			<a href="#" class="logo">HTML STARTER</a>
 			
 			<a href="javascript:;" class="search pull-right"><img src="img/search-w.svg" alt="" /></a>
 			<div class="searchholder">
