--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="">
+<html class="no-js" lang="hr">
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
 	<title>Web Title</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -265,14 +266,6 @@
 		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/10.jpg" title=""><img src="UserDocsImages/galerija/10.jpg" class="img-responsive"></a></div>
 		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/11.jpg" title=""><img src="UserDocsImages/galerija/11.jpg" class="img-responsive"></a></div>
 		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/12.jpg" title=""><img src="UserDocsImages/galerija/12.jpg" class="img-responsive"></a></div>
-		<!--<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/13.jpg" title=""><img src="UserDocsImages/galerija/13.jpg" class="img-responsive"></a></div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/14.jpg" title=""><img src="UserDocsImages/galerija/14.jpg" class="img-responsive"></a></div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/15.jpg" title=""><img src="UserDocsImages/galerija/15.jpg" class="img-responsive"></a></div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/16.jpg" title=""><img src="UserDocsImages/galerija/16.jpg" class="img-responsive"></a></div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/17.jpg" title=""><img src="UserDocsImages/galerija/17.jpg" class="img-responsive"></a></div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/18.jpg" title=""><img src="UserDocsImages/galerija/18.jpg" class="img-responsive"></a></div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/19.jpg" title=""><img src="UserDocsImages/galerija/19.jpg" class="img-responsive"></a></div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2"><a href="UserDocsImages/galerija/20.jpg" title=""><img src="UserDocsImages/galerija/20.jpg" class="img-responsive"></a></div> -->
 	</div>
 	
 </div>
